plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

ext {
    set('telegramVersion', '10.0.0')
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'GroomBook'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'

    runtimeOnly 'org.postgresql:postgresql'

    // Telegram — актуальная модель API
    implementation "org.telegram:telegrambots-springboot-longpolling-starter:${telegramVersion}"
    implementation "org.telegram:telegrambots-client:${telegramVersion}"

    // Google Calendar API
    implementation 'com.google.api-client:google-api-client:2.9.0'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20260225-2.0.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.8'
    testImplementation 'org.testcontainers:postgresql:1.19.8'

    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testAnnotationProcessor 'org.projectlombok:lombok'
}


tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'integration'
    }
}

tasks.register('integrationTest', Test) {
    useJUnitPlatform {
        includeTags 'integration'
    }
    group = 'verification'
    description = 'Запускает интеграционные тесты (требует Docker)'
    shouldRunAfter test
}

